Archive2/03/0df8a4f5d7ae05/output
main.cpp:1:5: error: expected unqualified-id
    12346  234890-98 . -> 12346  234890-98 . (false)
    ^
1 error generated.
