Archive2/03/0df8a4f5d7ae05/main.cpp
    12346  234890-98 . -> 12346  234890-98 . (false)
    12a46  awesome-98! -> 1246  -98! (true)
